# credit_card_fraud_detection

./: Credit_card_fraud_detection.ipynb  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_notebook.ipynb
dags/: run_train_antifraud.py
src/: dataset.py  main.py  model.py  predict.py  settings.py  test.py  train.py
