[tool.poetry]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = ""
authors = ["Natasha Musatova <natali.schimpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "2.2.0"
mlflow = "2.10.0"
argparse = "1.4.0"
loguru = "0.7.2"
clickhouse-driver = "0.2.6"
joblib = "1.3.2"
numpy = "1.26.3"
scikit-learn = "1.3.2"
nyoka = "5.5.0"
catboost = "1.2.5"
sklearn-pmml-model = "1.0.7"
pydantic-settings = "2.1.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.18.0"
imblearn = "^0.0"
ydf = "0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
