[tool.poetry]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = ""
authors = ["Natasha Musatova <natali.schimpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.18.0"
mlflow = "2.17.2"
loguru = "0.7.2"
numpy = "1.26.4"
pandas = "2.2.3"
scikit-learn = "1.5.2"
catboost = "1.2.5"
imblearn = "^0.0"
nyoka = "5.5.0"
sklearn-pmml-model = "1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
